--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "core-js": "^3.8.3",
+    "echarts": "^5.1.2",
     "element-ui": "^2.15.12",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
